--- a/site/index.html
+++ b/site/index.html
@@ -5,5 +5,7 @@
 </head>
 <body>
 <h1>Hello Coursera!</h1>
+<p>This is Chelsea from Sacramento taking an HTML course online</p>
+<footer align=center>Last updated: Feb 18, 2016 5:08 PM PT</footer>
 </body>
 </html>
